# diffract

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yaml  cookiecutter.json  dagger.json  pyproject.toml  zensical.toml
.github/workflows/: bootstrap.yaml  bump.yaml  ci.yaml  pr-title.yaml  publish.yaml
[[cookiecutter.project_slug]]/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dagger.json  pyproject.toml  zensical.toml
[[cookiecutter.project_slug]]/.github/workflows/: bump.yaml  ci.yaml  docs.yaml  publish.yaml
[[cookiecutter.project_slug]]/ci/src/main/: __init__.py
[[cookiecutter.project_slug]]/src/sheridan/[[cookiecutter.package_name]]/: __init__.py  cli.py
[[cookiecutter.project_slug]]/tests/: test_dummy.py
ci/src/main/: __init__.py
docs/decisions/: 001-delegate-to-iceberg.md  002-name-level-comparison.md  003-gitpython.md  004-pytest-mock.md  005-staged-index-comparison.md
hooks/: post_gen_project.py  pre_gen_project.py
src/sheridan/diffract/: __init__.py  checker.py  classifier.py  cli.py  config.py  differ.py  enums.py  exceptions.py  git_utils.py  models.py
tests/: conftest.py  test_checker.py  test_classifier.py  test_cli.py  test_config.py  test_differ.py  test_enums.py  test_exceptions.py  test_git_utils.py  test_models.py  test_package.py
