[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "sheridan-diffract"
version = "0.1.0"
description = "A short description of your project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "sheridan", email = "andrewasheridan@gmail.com" }]
# Add keywords and classifiers as needed:
# keywords = ["your", "keywords"]
# classifiers = [
#     "Development Status :: 3 - Alpha",
#     "Intended Audience :: Developers",
#     "License :: OSI Approved :: MIT License",
#     "Programming Language :: Python :: 3",
#     "Topic :: Software Development",
# ]
dependencies = [
    "sheridan-iceberg>=2.0.0",
    "gitpython"
]

[project.urls]
Repository = "https://github.com/andrewasheridan/diffract"
Issues = "https://github.com/andrewasheridan/diffract/issues"
Changelog = "https://github.com/andrewasheridan/diffract/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.7",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14.0",
    "commitizen>=4.13.9",
    "pre-commit>=4.5.1",
    "bandit[toml]>=1.9.4",
    "zensical",
    "mkdocstrings[python]>=1.0.3",
]

[project.scripts]
diffract = "sheridan.diffract.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sheridan"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 120
exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["sheridan"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sheridan.diffract --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/sheridan/diffract"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_also = [
    # Structurally unreachable: argparse with required=True never falls through.
    "parser\\.print_help\\(\\)",
    "sys\\.exit\\(1\\)$",
]

# ---------------------------------------------------------------------------
# commitizen
# ---------------------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:^version",
    ".pre-commit-config.yaml:rev: v.*# diffract",
]
tag_format = "v$version"
